<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openmrs.module</groupId>
    <artifactId>paperrecord</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Paper Record Management Module</name>
    <description>Add-on to the Reference Application for managing an archive of paper records alongside the EMR
    </description>
    <url>https://wiki.openmrs.org/display/docs/Paper+Record+Management+Module+Module</url>

    <developers>
        <developer>
            <name>PIH</name>
        </developer>
    </developers>

    <organization>
        <name>PIH</name>
        <url>http://pih.org</url>
    </organization>

    <scm>
        <connection>scm:git:git@github.com:PIH/openmrs-module-paperrecord.git</connection>
        <developerConnection>scm:git:git@github.com:PIH/openmrs-module-paperrecord.git</developerConnection>
        <url>scm:git:git@github.com:PIH/openmrs-module-paperrecord.git</url>
    </scm>

    <modules>
        <module>api</module>
        <module>omod</module>
    </modules>

    <properties>
        <openMRSVersion>1.10.1</openMRSVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <emrapiVersion>1.7-SNAPSHOT</emrapiVersion>
        <uiframeworkVersion>3.4-SNAPSHOT</uiframeworkVersion>
        <appuiVersion>1.4-SNAPSHOT</appuiVersion>
        <appframeworkVersion>2.4-SNAPSHOT</appframeworkVersion>
        <idgenVersion>3.2</idgenVersion>
        <providermanagementVersion>2.2</providermanagementVersion>
        <metadatasharingVersion>1.1.9</metadatasharingVersion>
        <reportingVersion>0.9.5-SNAPSHOT</reportingVersion>
        <serializationxstreamVersion>0.2.7</serializationxstreamVersion>
        <calculationVersion>1.1</calculationVersion>
        <printerVersion>1.2-SNAPSHOT</printerVersion>
        <htmlformentryVersion>2.6-SNAPSHOT</htmlformentryVersion>
        <coreappsVersion>1.1-SNAPSHOT</coreappsVersion>  <!-- currently only used for messages.properties -->
    </properties>

    <dependencies>
        <!-- Begin OpenMRS modules -->

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uiframework-api</artifactId>
            <version>${uiframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-1.10</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-api</artifactId>
            <version>${idgenVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <version>${providermanagementVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatasharing-api</artifactId>
            <version>${metadatasharingVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appui-api</artifactId>
            <version>${appuiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appframework-api</artifactId>
            <version>${appframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <version>${reportingVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <version>${calculationVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>printer-api</artifactId>
            <version>${printerVersion}</version>
            <scope>provided</scope>
        </dependency>


        <!-- Modules required only for testing purposes -->

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api-1.10</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS modules -->

        <!-- Begin OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.test</groupId>
            <artifactId>openmrs-test</artifactId>
            <version>${openMRSVersion}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS core -->

    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <target>1.6</target>
                        <source>1.6</source>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openmrs.maven.plugins</groupId>
                    <artifactId>maven-openmrs-plugin</artifactId>
                    <version>1.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.17</version>
                    <configuration>
                        <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                    <allowSnapshots>true</allowSnapshots>
                    <properties>
                        <property>
                            <name>openMRSVersion</name>
                            <version>[1.10.0,1.11.0-!)</version>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>openMRSwebVersion</name>
                            <version>[1.10.0,1.11.0-!)</version>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>htmlwidgetsVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>metadatasharingVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>metadatamappingVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>calculationVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>serializationxstreamVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>idgenVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>namephoneticsVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>addresshierarchyVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>providermanagementVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>eventVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>logicVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                        <property>
                            <name>webservicesRestVersion</name>
                            <banSnapshots>true</banSnapshots>
                        </property>
                    </properties>
                </configuration>
            </plugin>
        </plugins>

    </build>

    <repositories>
        <repository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>openmrs-repo-modules</id>
            <name>OpenMRS Modules</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules</url>
        </repository>
        <snapshotRepository>
            <id>openmrs-repo-snapshots</id>
            <name>OpenMRS Snapshots</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
